# npc-steering

./: .gitignore  README.md  pyproject.toml
artifacts/: probes_Qwen3.5-9B-MLX-4bit.pkl  probes_validation.md
data/: contrastive_pairs.json  empirical_decay.json  empirical_responses.json  empirical_responses.old_agent.json  persona_cards.json
docs/: getting_started.md
docs/transcripts/: mixed_emotions__aggressive_late.md  mixed_emotions__anxious_new_driver.md  mixed_emotions__calm_commuter.md
lib/: __init__.py  agent.py  appraisal.py  decisions.py  events.py  loop.py  mlx_steering.py  persona.py  probes.py  progress.py  state.py  trace.py
notes/: arousal_gate_ablation.md  card_vs_steering_ablation.md  design.md  literature_shangguan_2025.md  moss_audio_pivot_plan.md  writeup.md
scenarios/: highway_merge_storm.json  late_school_run.json  mixed_emotions.json  relaxed_sunday.json
scripts/: 01_run_scenario.py  02_extract_probes.py  03_validate_probes.py  04_test_agent.py  05_drive_agent.py  06_persona_sweep.py  07_calibrate_appraisal.py  08_calibrate_decay.py  09_arousal_gate_ablation.py  10_card_vs_steering_ablation.py  11_publish_transcripts.py  12_audio_audit.py
